# mem-os

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  README.md  RESEARCH_PROMPT.md  REVIEW_AND_COMMIT_PROMPT.md  SPEC.md  mcp-listing.md  mcp_server.py  mem-os.example.json  package.json  pyproject.toml  server.json  setup.cfg
.claude-plugin/: CLAUDE.md  plugin.json
.github/workflows/: ci.yml
benchmarks/: REPORT_v10.md  locomo_harness.py  locomo_judge.py  locomo_judge_results_v3.json  locomo_judge_results_v9_1.json  locomo_results_full.json  longmemeval_harness.py  longmemeval_results.json  results_e_conv4.json  results_e_conv7.json  results_e_conv8.json
docs/: claude-desktop-setup.md  mcp-servers-pr.md
hooks/: session-end.sh  session-start.sh
hooks/openclaw/mem-os/: HOOK.md  handler.js  handler.ts
scripts/: __init__.py  abstention_classifier.py  apply_engine.py  backup_restore.py  block_parser.py  bootstrap_corpus.py  capture.py  compaction.py  conflict_resolver.py  cron_runner.py  entity_ingest.py  evidence_packer.py  extractor.py  filelock.py  init_workspace.py  intel_scan.py  mcp_entry.py  namespaces.py  observability.py  observation_compress.py  recall.py  recall_vector.py  schema_version.py  session_summarizer.py  smoke_test.sh  sqlite_index.py  transcript_capture.py  validate.sh  validate_py.py
skills/apply-proposal/: SKILL.md
skills/integrity-scan/: SKILL.md
skills/memory-recall/: SKILL.md
templates/: intel-state.json  people.md  projects.md  tools.md
tests/: test_abstention_classifier.py  test_apply_engine.py  test_backup_restore.py  test_block_parser.py  test_capture.py  test_compaction.py  test_concurrent_integration.py  test_conflict_resolver.py  test_context_pack.py  test_edge_cases.py  test_evidence_packer.py  test_extractor.py  test_filelock.py  test_integration.py  test_intel_scan.py  test_mcp_server.py  test_namespaces.py  test_observability.py  test_recall.py  test_schema_version.py  test_sqlite_index.py
