[project]
name = "mem-os"
version = "1.0.0"
description = "Memory + Immune System for AI agents — local-first, auditable, self-correcting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "STARGA Inc", email = "noreply@star.ga" }
]
keywords = ["memory", "ai-agent", "integrity", "recall", "intelligence", "contradiction-detection", "drift-analysis", "self-correcting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]
embeddings = ["sentence-transformers>=2.0"]
all = ["fastmcp>=2.0", "sentence-transformers>=2.0"]

[project.urls]
Homepage = "https://github.com/star-ga/mem-os"
Repository = "https://github.com/star-ga/mem-os"
Issues = "https://github.com/star-ga/mem-os/issues"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.scripts]
mem-os-init = "mem_os.init_workspace:main"
mem-os-scan = "mem_os.intel_scan:main"
mem-os-recall = "mem_os.recall:main"
mem-os-capture = "mem_os.capture:main"
mem-os-validate = "mem_os.validate_py:main"
mem-os-mcp = "mem_os.mcp_entry:main"

[tool.setuptools]
packages = ["mem_os"]
package-dir = {"mem_os" = "scripts"}

[tool.setuptools.package-data]
mem_os = ["*.sh"]

# Installation modes:
# 1. Claude Code plugin (primary): git clone, no pip needed
# 2. Standalone CLI: pip install -e . → provides mem-os-init, mem-os-scan, etc.
# The mem_os package maps to scripts/ directory via package-dir.
